// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ImageThumbnails matches snapshot with Cloudinary images (includes transformed URLs) 1`] = `
<DocumentFragment>
  <div
    class="css-nequny"
  >
    <div
      class="css-2g58l9"
    >
      <div
        class="css-qutzxz"
      />
    </div>
    <div
      class="css-wmbcu5"
    >
      <div
        class="css-1b0h1pr"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ImageThumbnails matches snapshot with custom maxImages 1`] = `
<DocumentFragment>
  <div
    class="css-nequny"
  >
    <div
      class="css-2g58l9"
    >
      <div
        class="css-1k9k1u6"
      />
    </div>
    <div
      class="css-wmbcu5"
    >
      <div
        class="css-1kao8gg"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ImageThumbnails matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="css-nequny"
  >
    <div
      class="css-2g58l9"
    >
      <div
        class="css-1k9k1u6"
      />
    </div>
    <div
      class="css-wmbcu5"
    >
      <div
        class="css-1kao8gg"
      />
    </div>
    <div
      class="css-2g58l9"
    >
      <div
        class="css-1rjgnzl"
      />
    </div>
    <div
      class="css-wmbcu5"
    >
      <div
        class="css-13800m5"
      />
    </div>
  </div>
</DocumentFragment>
`;
